# gm-test-vectors

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
samples/: SM2_加密_10（解密格式）.txt  SM2_解密_10.txt  SM2签名_预处理后_10（验签格式）.txt  SM2验签_预处理后_10.txt  SM3_10.txt  SM3_HMAC_10.txt  SM4_CBCMAC.txt  SM4_CBC_加密.txt  SM4_CBC_解密.txt  SM4_CFB_加密.txt  SM4_CFB_解密.txt  SM4_CTR_加密.txt  SM4_CTR_解密.txt  SM4_ECB_加密.txt  SM4_ECB_解密.txt  SM4_GCM_加密.txt  SM4_GCM_解密.txt  SM4_OFB_加密.txt  SM4_OFB_解密.txt  SM4_XTS_加密.txt  SM4_XTS_解密.txt
src/: format.rs  main.rs  parser.rs  utils.rs
src/generators/: sm2.rs  sm3.rs  sm4.rs
src/verifiers/: mod.rs  sm2.rs  sm3.rs  sm4.rs
